--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
     --font-weight-bold: 700;
     --logo-size-s: 4rem;
     --logo-size-l: 7rem;
-    --icon-size: 3rem;
+    --icon-size: 2rem;
     --padding-frame-lr: 2rem;
 }
 
@@ -62,6 +62,7 @@ html {
 }
 
 .bg-img {
+    position: relative; /*for svg--arrow-up*/
     background: var(--filter-color-hero);
     background-size: cover;
     background-position: center;
@@ -98,6 +99,7 @@ html {
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 1;
 }
 
 .header__hide-desktop {
@@ -202,6 +204,20 @@ html {
     animation: move-arrow .7s alternate-reverse infinite;
 }
 
+.svg--arrow-up {
+    width: 3rem;
+    background-color: var(--button-color);
+    border-radius: 50%;
+    padding: 1rem;
+    box-sizing: content-box;
+}
+
+.up {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+}
+
 .footer {
     display: flex;
     flex-direction: column;
@@ -214,7 +230,7 @@ html {
     align-items: center;
     gap: 2rem;
     padding: 1rem 0 0 0;
-    font-size: var(--font-size-m);
+    font-size: var(--font-size-s);
 }
 
 .footer__copyright {
