--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,6 @@ html {
     width: var(--logo-size-s);
 }
 
-.nav__svg {
-    background-color: var(--frame-color);
-    border-radius: 50%;
-}
-
 .bg-img {
     position: relative; /*for svg--arrow-up*/
     background: var(--filter-color-hero);
@@ -95,25 +90,50 @@ html {
     position: fixed;
     top: 0;
     left: 0;
+    padding: 1rem;
     z-index: 1;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
 
+
+.header__svg {
+    background-color: var(--frame-color);
+    border-radius: 50%;
+}
+
+.header__svg--close {
+    background-color: transparent;
+    margin: 0 0 2rem 0;
+    align-self: end;
+}
+
 .nav {
-    /* position: fixed; */
-    /* top: 0; */
-    /* right: 0; */
+    background-color: var(--button-color);
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
     /* transform: translateY(-100%); */
 }
 
 .nav__item {
     list-style-type: none;
+    padding: 2rem 3rem;
 }
 
 .nav__link {
+    color: var(--light-text-color);
     text-decoration: none;
+}
+
+.nav__item:hover {
+    background-color: rgb(0, 165, 165);
+    cursor: pointer;
 }
 
 .header__hide-desktop {
