--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,12 @@ html {
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    /* transform: translateY(-100%); */
+    transform: translateX(100%);
+    transition: transform .2s ease-in-out;
+}
+
+.nav--open {
+    transform: translateX(0%);
 }
 
 .nav__item {
