--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ html {
     background-blend-mode: lighten;
 }
 
+.bg-img--activity {
+    background: var(--filter-color-secondary) url(../images/bg3.jpg);
+}
+
 .position {
     position: relative; /*for .header*/
     padding: 10% 0 0 0;
