--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@
     font-weight: var(--font-weight-regular);
 }
 
+html {
+    /* font-size: 10px; */
+    font-size: 62.5%;
+}
+
 /* Base styles */
 body {
     font-family: var(--font-family);
@@ -41,10 +46,6 @@ body {
     color: var(--dark-text-color);
 }
 
-html {
-    /* font-size: 10px; */
-    font-size: 62.5%;
-}
 
 .svg {
     display: block;
@@ -74,11 +75,6 @@ html {
 
 .bg-img--activity {
     background-image: url(../images/bg3.jpg);
-}
-
-.position {
-    position: relative; /*for .header*/
-    padding: 10% 0 0 0;
 }
 
 .home__frame {
@@ -256,6 +252,10 @@ html {
     gap: 2rem;
     padding: 1rem 0 0 0;
     font-size: var(--font-size-s);
+}
+
+.footer__icon {
+    width: var(--font-size-s);
 }
 
 .footer__copyright {
