--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,14 @@ body {
     height: 100%;
 }
 
+.page__separator {
+    margin: 8rem 0;
+}
+
+.page__separator--first {
+    margin: 0 0 8rem 0;
+}
+
 .bg-img--hero {
     background-image: url(../images/bg1.jpg);
     background-color: var(--filter-color-hero);
@@ -174,6 +182,12 @@ body {
     line-height: 2.2rem;
 }
 
+.frame__text--list {
+    margin: 0.5rem 0 0 0;
+    padding: 2rem var(--padding-frame-lr) 2rem 3.5rem;
+    line-height: 2.2rem;
+}
+
 .frame__text--carousel {
     width: 100%;
     flex-shrink: 0;
@@ -198,6 +212,14 @@ body {
     font-size: var(--font-size-m);
     padding: 1.5rem 0;
     text-align: center;
+}
+
+.frame__title--separate {
+    margin: 10rem 0 0 0;
+}
+
+.frame__list-item {
+    padding: 1rem 0;
 }
 
 .hero-section {
