--- a/css/style.css
+++ b/css/style.css
@@ -296,8 +296,48 @@ body {
     position: relative; /*for slideshow__prev and slideshow__next*/
 }
 
+.slideshow__images {
+    display: none;
+}
+
+
 .slideshow__image {
     width: 100%;
+}
+
+.slideshow__arrow {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    padding: 2rem;
+    color: var(--dark-text-color);
+    font-size: 5rem;
+    transition: .5s ease;
+    user-select: none;
+}
+
+.slideshow__arrow:hover {
+    background-color: var(--button-color);
+}
+
+.slideshow__arrow--next {
+    right: 0;
+}
+
+.slideshow__dot {
+    cursor: pointer;
+    height: 1rem;
+    width: 1rem;
+    margin: 0 .2rem;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color .5s ease;
+}
+
+.slideshow__dot--active,
+.slideshow__dot:hover {
+    background-color: #717171;
 }
 
 .footer {
