--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     --icon-size: 2rem;
     --padding-frame-lr: 2rem;
     --v-separator: 3rem;
-    --slideshow-btn-pos: 1.5rem;
+    --carousel-btn-pos: 1.5rem;
 }
 
 /* Resets */
@@ -288,40 +288,40 @@ body {
     text-decoration: none;
 }
 
-.slideshow__inner {
+.carousel__inner {
     height: 100%;
     width: 100%;
     overflow: hidden;
 }
 
-.slideshow {
-    position: relative; /*for .slideshow__button*/
+.carousel {
+    position: relative; /*for .carousel__button*/
     height: 40vh;
     padding: 0 1rem;
     overflow: hidden;
 }
 
-.slideshow__track {
-    position: relative; /*for .slideshow__item*/
+.carousel__track {
+    position: relative; /*for .carousel__item*/
     height: 100%;
     transition: transform 200ms ease-in;
 
 }
 
-.slideshow__item {
+.carousel__item {
     position: absolute; /*for script.js chainSlides*/
     width: 100%;
     height: 100%;
 }
 
-.slideshow__image {
+.carousel__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
 
 }
 
-.slideshow__button {
+.carousel__button {
     position: absolute;
     background-color: var(--button-color);
     border: none;
@@ -331,29 +331,29 @@ body {
     cursor: pointer;
 }
 
-.slideshow__button--prev {
-    left: var(--slideshow-btn-pos);
+.carousel__button--prev {
+    left: var(--carousel-btn-pos);
 }
 
-.slideshow__button--next {
-    right: var(--slideshow-btn-pos);
+.carousel__button--next {
+    right: var(--carousel-btn-pos);
 }
 
-.slideshow__svg {
+.carousel__svg {
     width: 3.5rem;
 }
 
-.slideshow__svg--next {
+.carousel__svg--next {
     transform: rotate(180deg);
 }
 
-.slideshow__dots {
+.carousel__dots {
     display: flex;
     justify-content: center;
     padding: .5rem 0;
 }
 
-.slideshow__dot {
+.carousel__dot {
     width: 2rem;
     height: 2rem;
     border: none;
@@ -363,7 +363,7 @@ body {
     cursor: pointer;
 }
 
-.slideshow__dot--active {
+.carousel__dot--active {
     background-color: rgba(0, 0, 0, .7);
 }
 
