--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ body {
 
 .bg-img--careers {  
     background-image: url(../images/bg5.jpg);
+    background-position: center center;
 }
 
 .header {
@@ -195,7 +196,7 @@ body {
 }
 
 .frame__text--list {
-    margin: 0.5rem 0 0 0;
+    margin: 0;
     padding: 2rem var(--padding-frame-lr) 2rem 3.5rem;
     line-height: 2.5rem;
 }
@@ -222,12 +223,9 @@ body {
 
 .frame__title {
     font-size: var(--font-size-m);
+    margin: 0  0 0.5rem 0;
     padding: 1.5rem 0;
     text-align: center;
-}
-
-.frame__title--separate {
-    margin: 10rem 0 0 0;
 }
 
 .frame__list-item {
