--- a/css/style.css
+++ b/css/style.css
@@ -64,26 +64,6 @@ body {
     height: 100%;
 }
 
-.page__separator {
-    margin: 8rem 0 0 0;
-}
-
-.page__counter-parent {
-    counter-reset: css-counter 0;
-}
-
-.page__counter-child {
-    counter-increment: css-counter 1;
-}
-
-.page__counter-child::before {
-    content: counter(css-counter) ". ";
-}
-
-.page__bold {
-    font-weight: var(--font-weight-bold);
-}
-
 .bg-img--hero {
     background-image: url(../images/bg1.jpg);
     background-color: var(--filter-color-hero);
@@ -108,6 +88,32 @@ body {
     background-image: url(../images/bg5.jpg);
     background-position: center center;
 }
+
+.bg-img--contact {  
+    background-image: url(../images/bg6.jpg);
+    background-position: center center;
+}
+
+.page__separator {
+    margin: 8rem 0 0 0;
+}
+
+.page__counter-parent {
+    counter-reset: css-counter 0;
+}
+
+.page__counter-child {
+    counter-increment: css-counter 1;
+}
+
+.page__counter-child::before {
+    content: counter(css-counter) ". ";
+}
+
+.page__bold {
+    font-weight: var(--font-weight-bold);
+}
+
 
 .header {
     width: 100%;
